--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy":"gh-pages -d dist"
+
   },
   "dependencies": {
+    "@react-three/drei": "^10.1.2",
+    "@react-three/fiber": "^9.1.2",
+    "gsap": "^3.12.2",
+    "leva": "^0.9.35",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "@react-three/fiber": "^9.1.2",
-    "@react-three/drei": "^10.1.2",
-    "three": "^0.168.0",
-    "gsap": "^3.12.2",
-    "leva": "^0.9.35"
+    "three": "^0.168.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -26,6 +29,7 @@
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "vite": "^6.3.5"
   }
